--- a/presentation/src/main/res/layout/movies_list_fragment.xml
+++ b/presentation/src/main/res/layout/movies_list_fragment.xml
@@ -20,8 +20,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:spanCount="3"
-        tools:listitem="@layout/movie_item"
+        app:spanCount="@integer/movies_columns_count"
+        tools:itemCount="20"
         tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         tools:itemCount="20"
         />
