--- a/presentation/src/main/res/layout/movie_item.xml
+++ b/presentation/src/main/res/layout/movie_item.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools">
-<ImageView
-    android:id="@+id/movieImageView"
-    android:layout_width="match_parent"
-    android:layout_height="200dp"
-    android:background="@color/colorPrimary"
-    tools:src="@tools:sample/avatars"
-    />
+    android:layout_height="wrap_content">
+
+    <ImageView
+        android:id="@+id/movieImageView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:src="@tools:sample/avatars"
+        tools:ignore="ContentDescription" />
+
 </FrameLayout>
