--- a/presentation/src/main/res/layout/movies_list_fragment.xml
+++ b/presentation/src/main/res/layout/movies_list_fragment.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,18 +11,20 @@
         android:id="@+id/moviesFilterSwitch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="@dimen/padding_12dp"
+        android:paddingBottom="@dimen/padding_12dp"
         android:text="@string/show_only_2020_year"
-        />
+        android:textAppearance="@style/TextAppearance.Bold16" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id ="@+id/moviesRecyclerView"
+        android:id="@+id/moviesRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="@dimen/padding_4dp"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="@integer/movies_columns_count"
         tools:itemCount="20"
         tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        tools:itemCount="20"
-        />
+        tools:listitem="@layout/movie_item" />
 
 </LinearLayout>
