--- a/presentation/src/main/res/layout/movies_list_fragment.xml
+++ b/presentation/src/main/res/layout/movies_list_fragment.xml
@@ -1,30 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".movies.MoviesListFragment">
+    android:layout_height="match_parent">
 
-    <Switch
-        android:id="@+id/moviesFilterSwitch"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/padding_12dp"
-        android:paddingBottom="@dimen/padding_12dp"
-        android:text="@string/show_only_2020_year"
-        android:textAppearance="@style/TextAppearance.Bold16" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".movies.MoviesListFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/moviesRecyclerView"
+        <Switch
+            android:id="@+id/moviesFilterSwitch"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/padding_12dp"
+            android:paddingBottom="@dimen/padding_12dp"
+            android:text="@string/show_only_2020_year"
+            android:textAppearance="@style/TextAppearance.Bold16" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/moviesRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/padding_4dp"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:spanCount="@integer/movies_columns_count"
+            tools:itemCount="20"
+            tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            tools:listitem="@layout/movie_item" />
+
+    </LinearLayout>
+
+    <FrameLayout
+        android:id="@+id/progressBarLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/padding_4dp"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:spanCount="@integer/movies_columns_count"
-        tools:itemCount="20"
-        tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        tools:listitem="@layout/movie_item" />
+        android:layout_height="match_parent"
+        android:background="@color/colorTransparent"
+        android:visibility="gone"
+        tools:visibility="visible">
 
-</LinearLayout>
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center" />
+    </FrameLayout>
+
+    <LinearLayout
+        android:id="@+id/errorLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:visibility="gone"
+        tools:visibility="visible">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/error_load_movies_press_button_to_retry" />
+
+        <Button
+            android:id="@+id/retryButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/retry_button" />
+    </LinearLayout>
+
+</FrameLayout>
